Fixed spacing issues

--- a/src/components/MainView/MainView.scss
+++ b/src/components/MainView/MainView.scss
@@ -2,10 +2,10 @@
 
 main {
     position: absolute;
-    top: 159px;
+    top: 152px;
     left: 40px;
     right: 40px;
-    bottom: 12px;
+    bottom: 15px;
     display: flex;
     background-color: $white;
     border: 1px solid $nepal;
